# dazzler-degauss

./: .gitignore  Jenkinsfile  README.md  app  pyproject.toml
infrastructure/: ws-dazzler-degauss.yaml
src/: lambda_function.py
src/dazzler_degauss/: main.py
