[tool.poetry]
name = "dazzler-degauss"
version = "0.1.0"
description = ""
authors = ["joliver <36411970+jimoliver@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
commitizen = "^3.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
commitizen = "^2.38.0"
coverage = "^7.0.0"
boto3 = "^1.28.57"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.4"
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
